[gd_scene load_steps=5 format=3 uid="uid://b8vv8t0n2s842"]

[ext_resource type="Texture2D" uid="uid://c1b2ql3rndt3r" path="res://Data/Textures/UI/UI1.png" id="1_ars55"]
[ext_resource type="PackedScene" uid="uid://cjn2gofp0rfbg" path="res://Source/Inventory/Slot.tscn" id="2_jcb6m"]
[ext_resource type="Script" path="res://Source/Inventory/Bag.gd" id="2_xsj6a"]
[ext_resource type="Script" path="res://Source/Inventory/CharacterPage.gd" id="4_lxfe6"]

[node name="Inventory" type="Control"]
custom_minimum_size = Vector2(398, 311)
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1920.0
offset_top = -540.0
offset_bottom = 540.0
grow_horizontal = 0
grow_vertical = 2

[node name="Bag" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -398.0
offset_top = -155.5
offset_bottom = 155.5
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("2_xsj6a")

[node name="NinePatchRect" type="NinePatchRect" parent="Bag"]
layout_mode = 0
offset_right = 398.0
offset_bottom = 311.0
texture = ExtResource("1_ars55")
region_rect = Rect2(290, 674, 92, 124)

[node name="GridContainer" type="GridContainer" parent="Bag/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -70.0
offset_right = 88.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="Slot1" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot2" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot3" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot4" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot5" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot6" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot7" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot8" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot9" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot10" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot11" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot12" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot13" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot14" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot15" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot16" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot17" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot18" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot19" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="Slot20" parent="Bag/NinePatchRect/GridContainer" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="CharacterPage" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(260, 350)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -175.0
offset_right = 260.0
offset_bottom = 175.0
grow_vertical = 2
script = ExtResource("4_lxfe6")

[node name="NinePatchRect" type="NinePatchRect" parent="CharacterPage"]
layout_mode = 0
offset_right = 260.0
offset_bottom = 350.0
texture = ExtResource("1_ars55")
region_rect = Rect2(737, 834, 92, 124)

[node name="Slot1" parent="CharacterPage/NinePatchRect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 108.0
offset_top = 272.0
offset_right = 172.0
offset_bottom = 336.0

[node name="Slot2" parent="CharacterPage/NinePatchRect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 8.0
offset_top = 86.0
offset_right = 72.0
offset_bottom = 150.0

[node name="Slot3" parent="CharacterPage/NinePatchRect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 170.0
offset_top = 102.0
offset_right = 234.0
offset_bottom = 166.0

[node name="Slot4" parent="CharacterPage/NinePatchRect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 172.0
offset_top = 188.0
offset_right = 236.0
offset_bottom = 252.0

[node name="Chest" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NinePatchRect" type="NinePatchRect" parent="Chest"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Slot1" parent="Chest/NinePatchRect" instance=ExtResource("2_jcb6m")]
layout_mode = 0

[node name="Slot2" parent="Chest/NinePatchRect" instance=ExtResource("2_jcb6m")]
layout_mode = 0

[node name="Slot3" parent="Chest/NinePatchRect" instance=ExtResource("2_jcb6m")]
layout_mode = 0

[node name="Slot4" parent="Chest/NinePatchRect" instance=ExtResource("2_jcb6m")]
layout_mode = 0

[node name="Slot5" parent="Chest/NinePatchRect" instance=ExtResource("2_jcb6m")]
layout_mode = 0

[node name="Slot6" parent="Chest/NinePatchRect" instance=ExtResource("2_jcb6m")]
layout_mode = 0

[node name="Slot7" parent="Chest/NinePatchRect" instance=ExtResource("2_jcb6m")]
layout_mode = 0

[node name="Slot8" parent="Chest/NinePatchRect" instance=ExtResource("2_jcb6m")]
layout_mode = 0

[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot1" to="Bag" method="onSlot1MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot1" to="Bag" method="onSlot1MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot2" to="Bag" method="onSlot2MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot2" to="Bag" method="onSlot2MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot3" to="Bag" method="onSlot3MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot3" to="Bag" method="onSlot3MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot4" to="Bag" method="onSlot4MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot4" to="Bag" method="onSlot4MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot5" to="Bag" method="onSlot5MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot5" to="Bag" method="onSlot5MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot6" to="Bag" method="onSlot6MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot6" to="Bag" method="onSlot6MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot7" to="Bag" method="onSlot7MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot7" to="Bag" method="onSlot7MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot8" to="Bag" method="onSlot8MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot8" to="Bag" method="onSlot8MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot9" to="Bag" method="onSlot9MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot9" to="Bag" method="onSlot9MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot10" to="Bag" method="onSlot10MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot10" to="Bag" method="onSlot10MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot11" to="Bag" method="onSlot11MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot11" to="Bag" method="onSlot11MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot12" to="Bag" method="onSlot12MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot12" to="Bag" method="onSlot12MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot13" to="Bag" method="onSlot13MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot13" to="Bag" method="onSlot13MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot14" to="Bag" method="onSlot14MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot14" to="Bag" method="onSlot14MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot15" to="Bag" method="onSlot15MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot15" to="Bag" method="onSlot15MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot16" to="Bag" method="onSlot16MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot16" to="Bag" method="onSlot16MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot17" to="Bag" method="onSlot17MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot17" to="Bag" method="onSlot17MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot18" to="Bag" method="onSlot18MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot18" to="Bag" method="onSlot18MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot19" to="Bag" method="onSlot19MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot19" to="Bag" method="onSlot19MouseExited"]
[connection signal="mouse_entered" from="Bag/NinePatchRect/GridContainer/Slot20" to="Bag" method="onSlot20MouseEntered"]
[connection signal="mouse_exited" from="Bag/NinePatchRect/GridContainer/Slot20" to="Bag" method="onSlot20MouseExited"]
[connection signal="mouse_entered" from="CharacterPage/NinePatchRect/Slot1" to="CharacterPage" method="onWeaponSlotMouseEntered"]
[connection signal="mouse_exited" from="CharacterPage/NinePatchRect/Slot1" to="CharacterPage" method="onWeaponSlotMouseExited"]
[connection signal="mouse_entered" from="CharacterPage/NinePatchRect/Slot2" to="CharacterPage" method="onBodySlotMouseEntered"]
[connection signal="mouse_exited" from="CharacterPage/NinePatchRect/Slot2" to="CharacterPage" method="onBodySlotMouseExited"]
[connection signal="mouse_entered" from="CharacterPage/NinePatchRect/Slot3" to="CharacterPage" method="onPantsSlotMouseEntered"]
[connection signal="mouse_exited" from="CharacterPage/NinePatchRect/Slot3" to="CharacterPage" method="onPantsSlotMouseExited"]
[connection signal="mouse_entered" from="CharacterPage/NinePatchRect/Slot4" to="CharacterPage" method="onNecklaceSlotMouseEntered"]
[connection signal="mouse_exited" from="CharacterPage/NinePatchRect/Slot4" to="CharacterPage" method="onNecklaceSlotMouseExited"]
